# openapi-v2.yaml
@@ -2477,6 +2477,12 @@ components:
         note:
           type: string
           nullable: true
+        allocation_mode:
+          $ref: '#/components/schemas/AllocationModeEnum'
+        subproject_allocations:
+          type: array
+          items:
+            $ref: '#/components/schemas/SubprojectAllocationWrite'
     PatchedSubprojectPatchRequest:
       type: object
       properties:
@@ -2884,6 +2890,12 @@ components:
         uuid:
           type: string
           format: uuid
+        allocation_mode:
+          $ref: '#/components/schemas/AllocationModeEnum'
+        subproject_allocations:
+          type: array
+          items:
+            $ref: '#/components/schemas/SubprojectAllocationWrite'
       required:
       - end
       - project_id
@@ -2912,6 +2924,19 @@ components:
       required:
       - allocation_bp
       - name
+      - subproject_id
+    SubprojectAllocationWrite:
+      type: object
+      properties:
+        subproject_id:
+          type: integer
+          minimum: 1
+        allocation_bp:
+          type: integer
+          maximum: 10000
+          minimum: 1
+      required:
+      - allocation_bp
       - subproject_id
     SubprojectCreateRequest:
       type: object
